--- a/css/styles.css
+++ b/css/styles.css
@@ -612,14 +612,47 @@ margin-right: 120px;
     width: 408px;
     transform: translate(-50%, -50%) scale(1);
     min-height: 584px;
+    padding: 72px 24px 24px 24px;
     left: 50%;
     top: 50%;
     background: #FCFCFC;
     box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-class{
+    margin-bottom: 8px;
+}
+
+.modal-label{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color:var(--customer-color);
+    display: block;
+    margin-bottom: 4px;
+}
+
+.modal-input{
+    position: relative;
+}
+
+.form-input{
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus{
+    color:var(--primary-accent-color);
 }
 
 .close-btn{
@@ -643,6 +676,16 @@ margin-right: 120px;
     background-color: #404bbf;
     border: none;
     fill: #ffffff
+}
+
+.modal-paragraph{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color:var(--offer-color);
+    margin-bottom: 16px;
 }
 
 .smooth-btn{
