--- a/css/styles.css
+++ b/css/styles.css
@@ -655,6 +655,18 @@ margin-right: 120px;
     color:var(--primary-accent-color);
 }
 
+.modal-svg{
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-svg:focus .modal-input{
+    fill: #4D5AE5;
+}
+
 .close-btn{
     position: absolute;
     top: 24px;
