--- a/css/styles.css
+++ b/css/styles.css
@@ -663,7 +663,7 @@ border-color:var(--primary-accent-color);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus,.modal-svg{
+.form-input:hover + .modal-svg{
     fill: #4D5AE5;
 }
 
