--- a/css/styles.css
+++ b/css/styles.css
@@ -667,6 +667,30 @@ border-color:var(--primary-accent-color);
     fill: #4D5AE5;
 }
 
+.modal-form-comment{
+    margin-bottom: 16px;
+}
+
+.form-textarea{
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-textarea:focus{
+    border-color: #4D5AE5;
+}
+
 .close-btn{
     position: absolute;
     top: 24px;
