--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,23 @@ border-color:var(--primary-accent-color);
     border-color: #4D5AE5;
 }
 
+.form-checkbox{
+    margin-bottom: 24px;
+}
+
+.checkbox-span{
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    
+}
+
 .close-btn{
     position: absolute;
     top: 24px;
