--- a/css/styles.css
+++ b/css/styles.css
@@ -717,6 +717,23 @@ fill:var(--paragraph-color);
     color:var(--primary-accent-color);
 }
 
+.send-btn{
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+    
+}
+
 .close-btn{
     position: absolute;
     top: 24px;
