--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,10 @@ p {
     cursor: pointer;
 }
 
+.custombtn:focus, .custombtn:hover{
+    background-color:#404BBF;
+}
+
 .portb {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -731,7 +735,7 @@ fill:var(--paragraph-color);
     background-color: #4D5AE5;
     border: none;
     border-radius: 4px;
-    
+
 }
 
 .close-btn{
