--- a/css/styles.css
+++ b/css/styles.css
@@ -735,7 +735,7 @@ fill:var(--paragraph-color);
     background-color: #4D5AE5;
     border: none;
     border-radius: 4px;
-
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn{
