--- a/css/styles.css
+++ b/css/styles.css
@@ -727,6 +727,7 @@ fill:var(--paragraph-color);
     height: 56px;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
+    margin-left: 90px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
@@ -736,6 +737,10 @@ fill:var(--paragraph-color);
     border: none;
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.send-btn:hover, .send-btn:focus{
+    background-color: #404bbf;
 }
 
 .close-btn{
