--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,43 @@ margin-right: 120px;
     height: 40px;
 }
 
+.paragraph-subs{
+    margin-bottom: 16px;
+    margin-left:60px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.footer-form{
+    display: flex;
+    margin-left:60px
+}
+
+footer-label{
+    gap: 24px;
+}
+
+.footer-input{
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    color: #ffffff;
+}
+
+.footer-input::placeholder{
+    color: #ffffff;
+}
+
 .footer-soc-links{
     width: 100%;
     height: 100%;
@@ -593,6 +630,28 @@ margin-right: 120px;
 }
 .footer-soc-links:hover, .footer-soc-links:focus{
     background-color: #31d0aa;
+}
+
+.submit-btn{
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+}
+
+.footer-btn-svg{
+    margin-left: 16px;
 }
 
 .backdrop {
